[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://ih1.redbubble.net/image.233409371.6783/flat,800x800,075,f.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            #freekekistan
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
