--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             #freekekistan
         </div>
+        <div class="bottom right">
+            <img src="http://i0.kym-cdn.com/photos/images/facebook/001/134/408/565.png" class="img-medium"/>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
