[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             #freekekistan
         </div>
-        <div class="bottom left">
+        <div class="bottom center">
             <img src="http://i0.kym-cdn.com/photos/images/facebook/001/134/408/565.png" class="img-medium"/>
         </div>
         <script type="text/javascript" src="/ui/main.js">
