--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
         <div class="bottom center">
             <img src="http://i0.kym-cdn.com/photos/images/facebook/001/134/408/565.png" class="img-medium"/>
         </div>
-        <div class="center">
+        <div class="left">
            <iframe width="854" height="480" src="https://www.youtube.com/embed/r-av6MzBIWU" frameborder="0" allowfullscreen></iframe>
         </div>
         <script type="text/javascript" src="/ui/main.js">
