--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div class="center">
+            <h4> 4chan </h4>
+        </div>
+        <div class="center">
             <img src="https://orig04.deviantart.net/74de/f/2012/155/d/1/4chan_logo_hq_by_michaudotcom-d529rdh.png" class="img-medium"/>
         </div>
         <br>
