--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://orig04.deviantart.net/74de/f/2012/155/d/1/4chan_logo_hq_by_michaudotcom-d529rdh.png" class="img-medium"/>
+            <img src="http://img.2ch.sc/img/4_0217.png" class="img-medium"/>
         </div>
         <br>
         <div class="center">
