[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -34,6 +34,9 @@
             <p>
                 And the money comes from youuuu!!!
             </p>
+            <p>
+                Button Below thanks
+            </p>
         </div>
     </body>
 </html>
