[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -37,6 +37,11 @@
             <p>
                 Button Below thanks
             </p>
+            <div>
+                <form action="http://google.com">
+                      <input type="submit" value="Go to Google" />
+                </form>
+            </div>
         </div>
     </body>
 </html>
