[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,25 @@
 <html>
+    <head>
+        <title>
+            Article Two - Debanshu Pani 
+        </title>
+    </head>
+    <body>
+        <div>
+             <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article Two 
+        </h3>
+        <div>
+            August 22 2017
+        </div>
+        <div>
+            <p>
+                <h2>
+                    We thank you for your concern :) no paypal lol pls mail cash
+                </h2>
+        </div>
+    </body>
+</html>
