[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -38,8 +38,8 @@
                 Button Below thanks
             </p>
             <div>
-                <form action="http://google.com">
-                      <input type="submit" value="Go to Google" />
+                <form action="ui/article-two.html">
+                      <input type="Pay" value="Go to payment page" />
                 </form>
             </div>
         </div>
