[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -39,7 +39,7 @@
             </p>
             <div>
                 <form action="ui/article-two.html">
-                      <input type="Pay" value="Go to payment page" />
+                      <input type="Submit" value="Go to payment page" />
                 </form>
             </div>
         </div>
