[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -38,9 +38,9 @@
                 Button Below thanks
             </p>
             <div>
-                <form action="ui/article-two.html">
+                <a class="btn" href="ui/article-two.html">Link</a>
+                <button class="btn" type="submit">Pay</button>
                       <input type="Submit" value="Go to payment page" />
-                </form>
             </div>
         </div>
     </body>
