--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -41,6 +41,7 @@
                 <a class="btn" href="ui/article-two.html">Link</a>
                 <button class="btn" type="submit">Pay</button>
                       <input type="Submit" value="Go to payment page" />
+                      <input class="btn" type="button" value="Input">
             </div>
         </div>
     </body>
