[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -38,10 +38,9 @@
                 Button Below thanks
             </p>
             <div>
-                <a class="btn" href="ui/article-two.html">Link</a>
-                <button class="btn" type="submit">Pay</button>
-                      <input type="Submit" value="Go to payment page" />
-                      <input class="btn" type="button" value="Input">
+               <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-one'" type="button">
+                         http://panidebanshu.imad.hasura-app.io/article-one
+               </button>
             </div>
         </div>
     </body>
