--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -38,8 +38,8 @@
                 Button Below thanks
             </p>
             <div>
-               <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-one'" type="button">
-                         http://panidebanshu.imad.hasura-app.io/article-one
+               <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-two'" type="button">
+                         Pay Here
                </button>
             </div>
         </div>
