--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article Two - Debanshu Pani 
+            Article Two | Debanshu Pani 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
