[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article One - Debanshu Pani 
+            Article One | Debanshu Pani 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
