--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -22,5 +22,14 @@
                     We thank you for your concern :) no paypal lol pls mail cash
                 </h2>
         </div>
+        <div>
+            <h4> 
+            Surprise Surprise it's not done yet. Click more  to find out 
+            </h4>
+            <hr/>
+             <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-three'" type="button">
+                        More
+               </button>
+        </div>
     </body>
 </html>
