--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,2 +1,29 @@
 <html>
+    <head>
+        <title>Article Three | Debanshu Pani </title>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    </head>
+    <body>
+        <div>
+             <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article Three 
+        </h3>
+        <div>
+            August 22 2017
+        </div>
+        <div>
+           <h2>
+               Thanks for sticking around till here fam :)
+           </h2><br>
+           <h2>
+               So here's Linus' new video 
+           </h2>
+        </div>
+        <div>
+             <iframe width="854" height="480" src="https://www.youtube.com/embed/vKc8GI_V-BM" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </body>
 </html>
