--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,45 +4,55 @@
             Article One | Debanshu Pani 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+            .container {
+                max-width: 800px
+                margin: 0 auto;
+                color:#FED7B0;
+                font-family: sans-serif;
+            }        
+        </style>
     </head>
     <body>
         <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One 
-        </h3>
-        <div>
-            August 22 2017
-        </div>
-        <div>
-            <p>
-                Yeah Please support thanks
-            </p>
-            <p>
-                Yeah and also donate thanks
-            </p>
-            <p>
-                The button is below thanks
-            </p>
-            <p>
-                Please be quick, kids are starving and need food
-            </p>
-            <p>
-                And you know food comes from money 
-            </p>
-            <p>
-                And the money comes from youuuu!!!
-            </p>
-            <p>
-                Button Below thanks
-            </p>
-            <div>
-               <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-two'" type="button">
-                         Pay Here
-               </button>
+            <div class="container">
+                <a href="/">Home</a>
             </div>
-        </div>
+            <hr/>
+            <h3>
+                Article One 
+            </h3>
+            <div>
+                August 22 2017
+            </div>
+            <div>
+                <p>
+                    Yeah Please support thanks
+                </p>
+                <p>
+                    Yeah and also donate thanks
+                </p>
+                <p>
+                    The button is below thanks
+                </p>
+                <p>
+                    Please be quick, kids are starving and need food
+                </p>
+                <p>
+                    And you know food comes from money 
+                </p>
+                <p>
+                    And the money comes from youuuu!!!
+                </p>
+                <p>
+                    Button Below thanks
+                </p>
+                <div>
+                   <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-two'" type="button">
+                             Pay Here
+                   </button>
+                </div>
+            </div>
+        </div>    
     </body>
 </html>
