[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,8 @@
             .container {
                 max-width: 800px
                 margin: 0 auto;
-                color:#FED7B0;
+                color: grey;
+                background color: #FED7B0;
                 font-family: sans-serif;
             }        
         </style>
