[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         <style>
             .container {
                 max-width: 800px
-                margin: 0 center;
+                margin: 0 auto;
                 color: grey;
                 background color: #FED7B0;
                 font-family: sans-serif;
