[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <style>
             .container {
-                max-width: 800px
+                max-width: 800px;
                 margin: 0 auto;
-                color: grey;
-                background color: #FED7B0;
+                color: #6a6a88;
                 font-family: sans-serif;
             }        
         </style>
