--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,7 @@
                 margin: 0 auto;
                 color: #6a6a88;
                 font-family: sans-serif;
+                padding top: 125px;
           }        
         </style>
     </head>
