--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -11,6 +11,8 @@
                 color: #6a6a88;
                 font-family: sans-serif;
                 padding-top: 125px;
+                padding-left: 20px;
+                padding-right: 20px;
           }        
         </style>
     </head>
