--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,9 +2,21 @@
     <head>
         <title>Article Three | Debanshu Pani </title>
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: #6a6a88;
+                font-family: sans-serif;
+                padding-top: 125px;
+                padding-left: 20px;
+                padding-right: 20px;
+          }        
+        </style>
     </head>
     <body>
         <div>
+                <div>
              <a href="/">Home</a>
         </div>
         <hr/>
@@ -26,5 +38,6 @@
         <div>
              <iframe width="854" height="480" src="https://www.youtube.com/embed/vKc8GI_V-BM" frameborder="0" allowfullscreen></iframe>
         </div>
+       </div>
     </body>
 </html>
