[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,32 +4,45 @@
             Article Two | Debanshu Pani 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: #6a6a88;
+                font-family: sans-serif;
+                padding-top: 125px;
+                padding-left: 20px;
+                padding-right: 20px;
+          }        
+        </style>
     </head>
     <body>
         <div>
-             <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Two 
-        </h3>
-        <div>
-            August 22 2017
-        </div>
-        <div>
-            <p>
-                <h2>
-                    We thank you for your concern :) no paypal lol pls mail cash
-                </h2>
-        </div>
-        <div>
-            <h4> 
-            Surprise Surprise it's not done yet. Click more  to find out 
-            </h4>
+            <div>
+                 <a href="/">Home</a>
+            </div>
             <hr/>
-             <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-three'" type="button">
-                        More
-               </button>
+            <h3>
+                Article Two 
+            </h3>
+            <div>
+                August 22 2017
+            </div>
+            <div>
+                <p>
+                    <h2>
+                        We thank you for your concern :) no paypal lol pls mail cash
+                    </h2>
+            </div>
+            <div>
+                <h4> 
+                Surprise Surprise it's not done yet. Click more  to find out 
+                </h4>
+                <hr/>
+                 <button onclick="location.href='http://panidebanshu.imad.hasura-app.io/article-three'" type="button">
+                            More
+                   </button>
+            </div>
         </div>
     </body>
 </html>
