--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,16 +2,9 @@
     <head>
         <title>Article Three | Debanshu Pani </title>
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <link href="/ui/style.css" rel="stylesheet" />
       <style>
-            .container {
-                max-width: 800px;
-                margin: 0 auto;
-                color: #6a6a88;
-                font-family: sans-serif;
-                padding-top: 125px;
-                padding-left: 20px;
-                padding-right: 20px;
-          }        
+            
         </style>
     </head>
     <body>
