[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
             <img src="http://img.2ch.sc/img/4_0217.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id="main-text">
             #freekekistan
         </div>
         <div class="bottom center">
