[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,9 @@
         <div class="center">
            <iframe width="854" height="480" src="https://www.youtube.com/embed/r-av6MzBIWU" frameborder="0" allowfullscreen></iframe>
         </div>
+        <script>
+            alert('Welcome')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
