--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="http://img.2ch.sc/img/4_0217.png" class="img-medium"/>
+            <img src="https://pbs.twimg.com/profile_images/893041562925506560/Il4h5KKE_400x400.jpg" class="img-medium"/>
         </div>
         <br>
         <script type="text/javascript" src="/ui/main.js">
