--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,17 @@
         <div class="center">
             <img src="https://pbs.twimg.com/profile_images/893041562925506560/Il4h5KKE_400x400.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
+        <h3>Professional</h3>
+        <hr/>
+        <div>
+            I'm a High school student who wants to learn programming
+        </div>
+        <hr/>
+        <div class="footer">
+            
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
