--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <hr/>
         <h3>Professional</h3>
         <hr/>
-        <div>
+        <div class="p">
             I'm a High school student who wants to learn programming
         </div>
         <hr/>
