--- a/ui/index.html
+++ b/ui/index.html
@@ -9,11 +9,11 @@
             <img src="https://pbs.twimg.com/profile_images/893041562925506560/Il4h5KKE_400x400.jpg" class="img-medium"/>
         </div>
         <hr/>
-        <div class="p">
+        <div class="center">
         <h3>Professional</h3>
         </div>
         <hr/>
-        <div class="p">
+        <div class="center">
             I'm a High school student who wants to learn programming
         </div>
         <hr/>
