--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,6 @@
          <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
-        <script type="text/javascript" src="/ui/main.js">
         <div class="center">
             <img src="https://pbs.twimg.com/profile_images/893041562925506560/Il4h5KKE_400x400.jpg" class="img-medium"/>
         </div>
@@ -21,6 +20,6 @@
         <div class="footer">
             This button <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
         </div>
-        </script>
+        <script type="text/javascript" src="/ui/main.js"></script>
     </body>
 </html>
