--- a/ui/index.html
+++ b/ui/index.html
@@ -10,11 +10,11 @@
         </div>
         <hr/>
         <div class="center">
-        <h3>Professional</h3>
+        <h3>17</h3>
         </div>
         <hr/>
         <div class="center">
-            I'm a High school student who wants to learn programming
+            Psbb kkn
         </div>
         <hr/>
         <div class="footer">
